[Fetch API] Abort fetching when the passed ScriptState is invalid.

Sometimes GlobalFetch::fetch is called with an invalid ScriptState.
Do not start fetching in such a case.

BUG=607156

Review-Url: https://codereview.chromium.org/1924193002
Cr-Commit-Position: refs/heads/master@{#390338}

Former-commit-id: 582f4114bc1bfc048633ea00172b9d0871ed9d8a